clean up console logs

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -1120,7 +1120,7 @@
               this.isFullScreen = document.fullscreenElement
             })
           })
-          .catch(err => console.log(err))
+          .catch(err => console.error(err))
       }
     },
     created: function () {
