--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -115,7 +115,7 @@
               <q-td v-if="props.row.tip_wallet != ''" auto-width>
                 ${props.row.tip_options}
               </q-td>
-              <q-td v-else auto-width>this N/A </q-td>
+              <q-td v-else auto-width>N/A </q-td>
               <q-td v-if="props.row.withdrawlimit >= 1" auto-width>
                 ${props.row.withdrawpin}
               </q-td>
@@ -388,25 +388,23 @@
           v-model.number="itemDialog.data.price"
           label="Price"
         ></q-input>
+        <q-input
+          filled
+          dense
+          v-model.number="itemDialog.data.tax"
+          label="Tax %"
+        ></q-input>
         <q-checkbox
           v-model="itemDialog.data.disabled"
           label="Disable"
         ></q-checkbox>
         <div class="row q-mt-lg">
           <q-btn
-            v-if="itemDialog.data.id"
-            unelevated
-            color="primary"
-            type="submit"
-            >Update Item</q-btn
-          >
-          <q-btn
-            v-else
             unelevated
             color="primary"
             :disable="!Boolean(itemDialog.data.title) || !Boolean(itemDialog.data.price)"
             type="submit"
-            >Create Item</q-btn
+            >${itemDialog.data.id ? 'Update Item' : 'Create Item'}</q-btn
           >
           <q-btn
             v-close-popup
@@ -756,22 +754,30 @@
             self.tposs = response.data.map(function (obj) {
               return mapTPoS(obj)
             })
-            console.log(self.tposs)
           })
       },
       sendTPosData() {
         const data = {
           ...this.formDialog.data,
-          tip_options: this.formDialog.data.tip_options
-            ? JSON.stringify(
-                this.formDialog.data.tip_options.map(str => parseInt(str))
-              )
-            : JSON.stringify([]),
-          tip_wallet: this.formDialog.data.tip_wallet || ''
+          tip_options:
+            this.formDialog.advanced.tips && this.formDialog.data.tip_options
+              ? JSON.stringify(
+                  this.formDialog.data.tip_options.map(str => parseInt(str))
+                )
+              : JSON.stringify([]),
+          tip_wallet:
+            (this.formDialog.advanced.tips &&
+              this.formDialog.data.tip_wallet) ||
+            '',
+          items: JSON.stringify(this.formDialog.data.items)
         }
         // delete withdrawbtwn if value is empty string, defaults to 10 minutes
         if (this.formDialog.data.withdrawbtwn == '') {
           delete data.withdrawbtwn
+        }
+        if (!this.formDialog.advanced.otc) {
+          data.withdrawlimit = null
+          data.withdrawpin = null
         }
         const wallet = _.findWhere(this.g.user.wallets, {
           id: this.formDialog.data.wallet
@@ -863,7 +869,6 @@
       },
       openItemDialog(id) {
         const [tposId, itemId] = id.split(':')
-        console.log(id, tposId, itemId)
         if (itemId) {
           const tpos = _.findWhere(this.tposs, {id: tposId})
           const item = tpos.itemsMap.get(id)
@@ -934,7 +939,6 @@
       },
       openUrlDialog(id) {
         this.urlDialog.data = _.findWhere(this.tposs, {id})
-        console.log(this.urlDialog.data)
         this.urlDialog.show = true
       }
     },
