reintroduce POS button colors (red, yellow, green)

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -115,7 +115,7 @@
                 size="xl"
                 :outline="!($q.dark.isActive)"
                 rounded
-                color="secondary"
+                color="negative"
                 >C</q-btn
               >
               <q-btn
@@ -133,7 +133,7 @@
                 size="xl"
                 :outline="!($q.dark.isActive)"
                 rounded
-                color="secondary"
+                color="warning"
                 class="btn-cancel"
                 >⬅</q-btn
               >
@@ -153,7 +153,7 @@
                 size="xl"
                 :outline="!($q.dark.isActive)"
                 rounded
-                color="secondary"
+                color="positive"
                 class="btn-confirm"
                 >Ok</q-btn
               >
