--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -247,7 +247,7 @@
                         :disabled="item.quantity == 1"
                       ></q-btn>
                       <div class="text-center">
-                        <span class="text-primary text-bold"
+                        <span class="text-bold"
                           >${item.quantity}</span
                         >
                       </div>
