contrast of item cart
@sticka

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -258,9 +258,7 @@
                         :disabled="item.quantity == 1"
                       ></q-btn>
                       <div class="text-center">
-                        <span class="text-primary text-bold"
-                          >${item.quantity}</span
-                        >
+                        <span class="text-bold">${item.quantity}</span>
                       </div>
                       <q-btn
                         @click="addToCart(item)"
