--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -551,7 +551,7 @@
     <q-dialog v-model="atmBox" @hide="atmPin = null">
       <q-card>
         <q-card-section class="row items-center q-pb-none">
-          <div class="text-h6">Withdraw pin</div>
+          <div class="text-h6">Withdraw PIN</div>
         </q-card-section>
         <q-card-section>
           <q-form autofocus @submit="atmSubmit" class="q-gutter-md">
