don't allow negative values on UI

--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -402,6 +402,7 @@
             type="number"
             label="Withdraw premium"
             step="0.01"
+            min="0.01"
           ></q-input>
         </template>
 
