--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -421,6 +421,14 @@
             @click="copyText(invoiceDialog.data.payment_request)"
             >Copy invoice</q-btn
           >
+          <q-btn
+            outline
+            color="grey"
+            class="q-ml-md"
+            type="a"
+            :href="'lightning:'+invoiceDialog.data.payment_request"
+            >Pay in wallet</q-btn
+          >
           <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
         </div>
       </q-card>
