--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -335,8 +335,8 @@
               :src="item.image"
             />
 
-            <q-card-section class="q-mb-auto">
-              <div class="text-h6 ellipsis">${item.title}</div>
+            <q-card-section class="q-mt-auto">
+              <div class="text-h6">${item.title}</div>
               <div class="text-subtitle1">${item.formattedPrice}</div>
               <div
                 v-if="item.description"
@@ -607,8 +607,8 @@
   }
 
   .responsive-img {
-    height: 100%;
     width: 100%;
+    height: auto;
     max-height: 210px;
     object-fit: scale-down;
   }
