--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -4,7 +4,10 @@
   <div class="col-12 col-md-8 col-lg-7 q-gutter-y-md">
     <q-card>
       <q-card-section>
-        <q-btn unelevated color="primary" @click="formDialog.show = true"
+        <q-btn
+          unelevated
+          color="primary"
+          @click="formDialog.show = true; formDialog.data.withdrawpin = genratePIN()"
           >New TPoS</q-btn
         >
       </q-card-section>
@@ -766,7 +769,7 @@
         formDialog: {
           show: false,
           data: {
-            withdrawpin: 878787,
+            withdrawpin: null,
             tip_options: [],
             withdrawbtwn: 10
           },
@@ -841,10 +844,14 @@
       }
     },
     methods: {
+      genratePIN() {
+        // random 6 digit PIN
+        return Math.floor(100000 + Math.random() * 999999)
+      },
       closeFormDialog() {
         this.formDialog.show = false
         this.formDialog.data = {
-          withdrawpin: 878787,
+          withdrawpin: null,
           tip_options: [],
           withdrawbtwn: 10
         }
@@ -908,6 +915,9 @@
         }
         if (this.formDialog.data.withdrawlimit >= 1) {
           this.formDialog.advanced.otc = true
+        }
+        if (!this.formDialog.data.withdrawpin) {
+          this.formDialog.data.withdrawpin = this.genratePIN()
         }
         this.formDialog.show = true
       },
